--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <link href="https://fonts.googleapis.com/css?family=El+Messiri|Josefin+Slab|Modak&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cute+Font&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Galada|Parisienne|Playfair+Display+SC|Poiret+One&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
