--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./img/derya-the-coder-transparent-2.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" user-scalable="yes"/>
     <!-- <meta data-react-helmet="true" name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui"> -->
