adds new meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" user-scalable="yes"/>
     <!-- <meta data-react-helmet="true" name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui"> -->
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Welcome to Derya Tanriverdi's Website"/>
+    <meta property="og:image" content="./img/Derya-the-coder-transparent-3.png"/>
     <meta
       name="description"
       content="Welcome to my page! My name is Derya Tanriverdi and I am a Full Stack Software Engineer. My coding journey began when my friend suggested to try coding due to my love of foreign languages; this connection piqued my curiosity. First I signed up for Codecademy and learned HTML and CSS. Then I learned Ruby through Udemy where I really found my passion for coding, and I just kept going! I love the challenge of learning new code and creating code to turn ideas into reality!"
